# cerberus

./: .env.example  .gitignore  ENRICHED_CONTEXT_LIVE.md  IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/cmd/hashpass/: main.go
backend/cmd/migrate/: main.go
backend/cmd/worker/: main.go
backend/internal/api/: auth_handlers.go  responses.go  router.go
backend/internal/modules/artifacts/: CONTEXT_GRAPH_README.md  USAGE.md  ai_analysis.go  chunking.go  context_cache.go  context_graph.go  context_graph_init.go  context_selector.go  embeddings.go  (+11 more)
backend/migrations/: 001_foundation.sql  002_artifacts.sql  003_auth_system.sql  003_financial.sql  004_risk.sql  005_seed_data.sql  006_fix_artifact_unique_constraint.sql  006_invoice_replacement_tracking.sql  007_cleanup_orphaned_invoices.sql  007_program_configuration.sql  008_risk_enrichments.sql  008_simplify_to_internal_org.sql  009_person_merge_groups.sql  010_context_graph_enhancements.sql  011_deduplicate_enrichments.sql  012_multi_tenant_organizations.sql
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-MODULES.md  03-ROADMAP.md  04-DATA-MODEL.md  05-AI-STRATEGY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts  authApi.ts
frontend/src/types/: auth.ts
rustfs/: Cargo.toml  Dockerfile
rustfs/src/: main.rs
(+99 files in other folders)
